@@ -5,7 +5,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import org.springframework.http.MediaType;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -23,12 +22,12 @@ public class MovieController {
     private static final String IMG_URL  = "https://image.tmdb.org/t/p/w500";
 
     private static final Map<String, CacheEntry> CACHE = new HashMap<String, CacheEntry>();
-    private static final long CACHE_TTL_MS = 60000; // 60초
-
+    private static final long CACHE_TTL_MS = 60000;
 
     private static class CacheEntry {
         long savedAt;
         Map<String, Object> data;
+
         CacheEntry(long savedAt, Map<String, Object> data) {
             this.savedAt = savedAt;
             this.data = data;
@@ -42,6 +41,7 @@ public class MovieController {
             @RequestParam(value="sort", defaultValue="release_date") String sort,
             Model model
     ) {
+
         String sortBy;
         if ("popularity".equalsIgnoreCase(sort)) {
             sortBy = "popularity.desc";
@@ -55,15 +55,20 @@ public class MovieController {
 
         CacheEntry ce = CACHE.get(cacheKey);
         if (ce != null && (System.currentTimeMillis() - ce.savedAt) < CACHE_TTL_MS) {
+
             @SuppressWarnings("unchecked")
-            List<Map<String, Object>> movies = (List<Map<String, Object>>) ce.data.get("movies");
-            MoviePageInfo pageInfo = (MoviePageInfo) ce.data.get("pageInfo");
+            List<Map<String, Object>> movies =
+                    (List<Map<String, Object>>) ce.data.get("movies");
+
+            MoviePageInfo pageInfo =
+                    (MoviePageInfo) ce.data.get("pageInfo");
 
             model.addAttribute("movies", movies);
             model.addAttribute("pi", pageInfo);
             model.addAttribute("genreId", genreId);
             model.addAttribute("sort", sort);
             model.addAttribute("error", "");
+
             return "movie/movieInfo";
         }
 
@@ -86,11 +91,11 @@ public class MovieController {
         int fetchPage = cPage;
         int fetchTries = 0;
         int tmdbTotalResults = 0;
-
         int tmdbTotalPages = 0;
 
         try {
             while (pageMovies.size() < 15 && fetchTries < 3) {
+
                 String url = baseDiscover + "&page=" + fetchPage;
 
                 @SuppressWarnings("unchecked")
@@ -100,35 +105,34 @@ public class MovieController {
 
                 Object tr = result.get("total_results");
                 Object tp = result.get("total_pages");
+
                 if (tr instanceof Number) tmdbTotalResults = ((Number) tr).intValue();
                 if (tp instanceof Number) tmdbTotalPages = ((Number) tp).intValue();
 
                 @SuppressWarnings("unchecked")
-                List<Map<String, Object>> results = (List<Map<String, Object>>) result.get("results");
+                List<Map<String, Object>> results =
+                        (List<Map<String, Object>>) result.get("results");
+
                 if (results == null || results.isEmpty()) break;
 
                 for (Map<String, Object> m : results) {
                     if (pageMovies.size() >= 15) break;
 
-                    // 포스터 없는 영화 제외
-                    Object posterPathObj = m.get("poster_path");
-                    String posterPath = (posterPathObj == null) ? null : posterPathObj.toString();
-                    if (posterPath == null || posterPath.trim().isEmpty() || "null".equals(posterPath)) {
-                        continue;
-                    }
+                    String posterPath = (String) m.get("poster_path");
+                    if (posterPath == null || posterPath.trim().isEmpty()) continue;
+
                     m.put("posterUrl", IMG_URL + posterPath);
 
-                    Object titleObj = m.get("title");
-                    if (titleObj == null || String.valueOf(titleObj).trim().isEmpty()) {
-                        Object ot = m.get("original_title");
-                        m.put("title", ot == null ? "제목 없음" : String.valueOf(ot));
+                    if (m.get("title") == null || String.valueOf(m.get("title")).isBlank()) {
+                        m.put("title",
+                                m.get("original_title") == null
+                                        ? "제목 없음"
+                                        : m.get("original_title"));
                     }
 
                     Object idObj = m.get("id");
                     if (idObj instanceof Number) {
-                        m.put("tmdbId", String.valueOf(((Number) idObj).intValue())); // "829202"
-                    } else {
-                        m.put("tmdbId", String.valueOf(idObj)); // fallback
+                        m.put("tmdbId", ((Number) idObj).intValue());
                     }
 
                     pageMovies.add(m);
@@ -136,6 +140,7 @@ public class MovieController {
 
                 fetchPage++;
                 fetchTries++;
+
                 if (tmdbTotalPages > 0 && fetchPage > tmdbTotalPages) break;
             }
 
@@ -147,23 +152,25 @@ public class MovieController {
             model.addAttribute("sort", sort);
             model.addAttribute("error", "");
 
-
             Map<String, Object> cacheData = new HashMap<String, Object>();
-
             cacheData.put("movies", pageMovies);
             cacheData.put("pageInfo", pi);
+
             CACHE.put(cacheKey, new CacheEntry(System.currentTimeMillis(), cacheData));
 
         } catch (Exception e) {
+
             model.addAttribute("movies", new ArrayList<Map<String, Object>>());
             model.addAttribute("pi", buildPageInfo(0, 1, 5, 15));
             model.addAttribute("genreId", genreId);
             model.addAttribute("sort", sort);
-            model.addAttribute("error", "TMDB 호출 실패: " + e.getClass().getName() + " / " + e.getMessage());
+            model.addAttribute("error",
+                    "TMDB 호출 실패: " + e.getClass().getName() + " / " + e.getMessage());
         }
 
         return "movie/movieInfo";
     }
+
     @ResponseBody
     @GetMapping("/tmdb/movieDetail.mo")
     public Map<String, Object> tmdbMovieDetail(
@@ -186,9 +193,8 @@ public class MovieController {
             @SuppressWarnings("unchecked")
             Map<String, Object> data = rt.getForObject(url, Map.class);
 
-            Object posterPathObj = data.get("poster_path");
-            if (posterPathObj != null) {
-                data.put("posterUrl", IMG_URL + posterPathObj);
+            if (data.get("poster_path") != null) {
+                data.put("posterUrl", IMG_URL + data.get("poster_path"));
             }
 
             res.put("ok", true);
@@ -202,8 +208,14 @@ public class MovieController {
         return res;
     }
 
-    private MoviePageInfo buildPageInfo(int listCount, int currentPage, int pageLimit, int movieLimit) {
+    private MoviePageInfo buildPageInfo(
+            int listCount,
+            int currentPage,
+            int pageLimit,
+            int movieLimit) {
+
         MoviePageInfo pi = new MoviePageInfo();
+
         pi.setListCount(listCount);
         pi.setCurrentPage(currentPage);
         pi.setPageLimit(pageLimit);
@@ -219,6 +231,72 @@ public class MovieController {
         pi.setMaxPage(maxPage);
         pi.setStartPage(startPage);
         pi.setEndPage(endPage);
+
         return pi;
     }
+    @ResponseBody
+    @GetMapping("/tmdb/movieCredits.mo")
+    public Map<String, Object> tmdbMovieCredits(@RequestParam("tmdbId") String tmdbIdRaw) {
+
+        String tmdbId = tmdbIdRaw;
+        if (tmdbId.contains(".")) {
+            tmdbId = tmdbId.substring(0, tmdbId.indexOf('.'));
+        }
+
+        Map<String, Object> res = new HashMap<String, Object>();
+        RestTemplate rt = new RestTemplate();
+
+        try {
+            String url =
+                    BASE_URL + "/movie/" + tmdbId + "/credits"
+                    + "?api_key=" + API_KEY
+                    + "&language=ko-KR";
+
+            @SuppressWarnings("unchecked")
+            Map<String, Object> data = rt.getForObject(url, Map.class);
+
+            String director = "";
+            StringBuilder directors = new StringBuilder();
+
+            @SuppressWarnings("unchecked")
+            List<Map<String, Object>> crew = (List<Map<String, Object>>) data.get("crew");
+            if (crew != null) {
+                for (Map<String, Object> c : crew) {
+                    String job = (c.get("job") == null) ? "" : String.valueOf(c.get("job"));
+                    if ("Director".equalsIgnoreCase(job)) {
+                        String name = (c.get("name") == null) ? "" : String.valueOf(c.get("name"));
+                        if (!name.isBlank()) {
+                            if (directors.length() > 0) directors.append(", ");
+                            directors.append(name);
+                        }
+                    }
+                }
+            }
+            director = directors.toString();
+
+            @SuppressWarnings("unchecked")
+            List<Map<String, Object>> cast = (List<Map<String, Object>>) data.get("cast");
+            List<String> actorNames = new java.util.ArrayList<String>();
+            if (cast != null) {
+                int limit = Math.min(8, cast.size());
+                for (int i = 0; i < limit; i++) {
+                    Map<String, Object> a = cast.get(i);
+                    if (a == null) continue;
+                    String name = (a.get("name") == null) ? "" : String.valueOf(a.get("name"));
+                    if (!name.isBlank()) actorNames.add(name);
+                }
+            }
+
+            res.put("ok", true);
+            res.put("director", director.isBlank() ? "-" : director);
+            res.put("actors", actorNames);
+
+        } catch (Exception e) {
+            res.put("ok", false);
+            res.put("message", e.getMessage());
+        }
+
+        return res;
+    }
+
 }
